# irsai_mer_backend

./: .env  .gitignore  Cargo.toml  docker-compose.yml
src/: main.rs
src/db/: mod.rs
src/event_consumers/: drone_status_consumer.rs  mod.rs
src/models/: drone_status.rs  mod.rs
