[package]
name = "israi_mer_geodetection"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = "1.0.219"
serde_json = "1.0.140"
dotenvy = { version = "0.15", fetures = ["macro"] }
lapin = "2.5.1"
actix = "0.13.5"
futures-lite = "2.6.0"
mongodb = "3"
env_logger = "0.11.8"
chrono = "0.4.40"
log = "0.4.27"

